# rust_webapp_example

./: .gitignore  README.md
database/: refinery.toml
database/migrations/: U00001__creates_user_table.sql  U00002__create_token_table.sql  U00003__alter_token_table.sql  U00004__create_refresh_token_table.sql  U00005__alter_refresh_token_table.sql
docker/: docker-compose-dev.yaml
rasrme-api/: .env  .env-dbg  Cargo.toml
rasrme-api/src/: main.rs
rasrme-api/src/config/: db.rs  mod.rs  template.rs  token.rs
rasrme-api/src/controller/: auth_controller.rs  mod.rs  user_controller.rs
rasrme-api/src/exception/: api_error_code.rs
rasrme-api/src/model/: auth.rs  event.rs  mod.rs  refresh_token.rs  token.rs  user.rs
rasrme-api/src/notifier/: amqp.rs  mail_consumer.rs  mod.rs
rasrme-api/src/repository/: mod.rs  refresh_token_repository.rs  token_repository.rs  user_repository.rs
rasrme-api/src/service/: auth_service.rs  jwt_service.rs  mod.rs  refresh_token_service.rs  token_service.rs  user_service.rs
rasrme-api/src/util/: mod.rs  validators.rs
rasrme-api/templates/: mail_validation.html
