[package]
name = "rmarme-api"
version = "0.1.0"
authors = ["Johny Marques <johnymbr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = { version = "1.5.3", features = ["traces"] }
axum = { version = "0.7.4", features = ["tracing"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
axum-macros = "0.4.1"
bcrypt = "0.15.0"
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
fancy-regex = "0.13.0"
hyper = { version = "1.1.0", features = ["full"] }
jsonwebtoken = "9.2.0"
lettre = { version = "0.11.4", features = ["tracing"] }
minijinja = { version = "1.0.12", features = ["loader"] }
rand = "0.8.5"
refinery = { version = "0.8.12", features = ["postgres"] }
refinery-core = { version = "0.8.12", features = ["postgres"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
time = "0.3.34"
tokio = { version = "1.35.1", features = ["full"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
